# edge-room-monitor

./: README.md  wifi_config
edge-room-monitor/: .gitignore  API_IMPLEMENTATION.md  CMakeLists.txt  COMMIT_MESSAGE.txt  NEXT_STEPS.md  README.md  start_app.sh  test_api.sh
edge-room-monitor/configs/: camera_infer.pipeline  camera_preview.pipeline  nvtracker_config.yml  resnet50_reid_config.txt  yolov8n_infer_config.txt
edge-room-monitor/models/: README.md  yolov8n.onnx.url
edge-room-monitor/scripts/: download_reid_model.sh  prepare_models.sh  run_in_container.sh
edge-room-monitor/src/: main.cpp  yolov8_parser.cpp
edge-room-monitor/ui/: debug.html  mjpeg_viewer.html  monitor.html
jetson_setup_scripts/: setup_prod.sh
jetson_setup_scripts/modules/: install_host_packages.sh  setup_app_service.sh  setup_docker_env.sh  setup_wifi.sh
